# gridlife

./: Cargo.toml  README.md  justfile
.github/workflows/: check.yml  test.yml
examples/tui/: Cargo.toml
examples/tui/src/: main.rs
src/: lib.rs  main.rs
