[package]
name = "game-of-life"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "An library to simulate a Conways Game of Life automaton"
readme = "README.md"
homepage = "https://github.com/sinon/game-of-life"
repository = "https://github.com/sinon/game-of-life"
include = ["/src", "!/src/main.rs"]

[dependencies]
crossterm = { version = "0.28.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
fastrand = { version = "2.3.0", features = ["js"] }


[lib]
name = "game_of_life"

[features]
build-binary = ["ratatui", "crossterm"]

[[bin]]
name = "gol"
path = "src/main.rs"
required-features = ["build-binary"]
