[package]
name = "gridlife"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "An library to generate and simulate Conways Game of Life cellular automatons"
readme = "README.md"
homepage = "https://github.com/sinon/game-of-life"
repository = "https://github.com/sinon/game-of-life"
include = ["/src", "!/src/main.rs"]
keywords = ["gameoflife", "conways", "celluarautomaton"]
categories = ["data-structures", "games"]

[dependencies]
crossterm = { version = "0.28.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
fastrand = { version = "2.3.0", features = ["js"] }


[lib]
name = "gridlife"

[features]
build-binary = ["ratatui", "crossterm"]

[[bin]]
name = "gol"
path = "src/main.rs"
required-features = ["build-binary"]
