[package]
name = "gridlife"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "An library to generate and simulate Conways Game of Life cellular automatons"
readme = "README.md"
homepage = "https://github.com/sinon/game-of-life"
repository = "https://github.com/sinon/game-of-life"
include = ["/src", "!/src/main.rs"]
keywords = ["gameoflife", "conways", "celluarautomaton"]
categories = ["data-structures", "games"]
rust-version = "1.60.0"

[dependencies]
fastrand = { version = "2.3.0", features = ["js"] }

[dev-dependencies]
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }

[lib]
name = "gridlife"


[[example]]
name = "tui"
path = "examples/tui/main.rs"
test = true
